# dodecaplex

./: CMakeLists.txt  README.md  config.h.in
include/: attributeSystem.h  audio.h  bufferObjects.h  cla.h  debug.h  dmath.h  dodecaplex.h  gameWindow.h  graphicsPipe.h  guiNodes.h  pentagon.h  playerLocation.h  rhombus.h  shaderClass.h  sharedUniforms.h  sigils.h  spells.h  textures.h  transform.h  triangularization.h  window.h  world.h
main/: fragment.cpp  game.cpp  graphicsPipe.cpp  select.cpp  spin.cpp  vortex.cpp
models/: canvas.blend
python/: Dodecaplex_Solver.py  demucs_demo.py  dodecaplex.h  fourdsolids.py  mathhelpers.py  modeling.py  plotting.py  relative.py  scrapy.py  tiles.py
python/shader_scripts/: Crossover.py  Default.py  FFT.py
python/shader_scripts/programs/: fft_shader.frag  purple-vortex.glsl
scraps/: rhombus_template.odg
shaders/: book.vert  displacement_dodecaplex.vert  global.glsl  projection.glsl  projection.vert  prune.geom  shrapnel.vert  spell_dodecaplex.frag  spell_dodecaplex_psych.frag  spell_dodecaplex_psych2.frag  spin.frag  spin.geom  spin.vert  world.vert
shaders/simple_fragment/: camera.glsl  cheops-animated.frag  dunes.frag  green-vortex.frag  hueRotation.glsl  purple-vortex-shadertoy.frag  purple-vortex.frag  sharedUniforms.glsl  snoise.glsl
shaders/simple_fragment/experimental/: cartoon-dunes.frag
src/: audio.cpp  bufferObjects.cpp  cell.cpp  cla.cpp  debug.cpp  gameWindow.cpp  graphicsPipe.cpp  main.cpp  models.cpp  pentagon.cpp  playerLocation.cpp  rhombus.cpp  shaderClass.cpp  shaderInterface.cpp  spells.cpp  textures.cpp  tirangularization.cpp  triangularization.cpp  window.cpp  world.cpp
textures/: test_text.xcf
